2002-10-01  Radek Doulik  <rodo@ximian.com>

	* htmltextslave.c (get_offset_for_pointer): fixed offset
	computation, use utf8 functions instead of using byte positions

2002-10-01  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (new_obj_from_uri): fix the uri strcmp to actually
	compare the transport, go ahead and paste unknown file types as
	urls (some feedback is better than none).

2002-09-30  Radek Doulik  <rodo@ximian.com>

	* htmlprinter.c (draw_text): removed unused local variable

	* htmlengine.c (update_embedded): removed unused local variable

	* gtkhtml.c (gtk_html_insert_html_generic): check tmp formlist
	instead of html one

2002-09-25  Radek Doulik  <rodo@ximian.com>

	* htmlfontmanager.c (get_real_font_size): minimal font size 4

2002-09-24  Radek Doulik  <rodo@ximian.com>

	* htmlobject.c (move_object_cursor): continue move to next in case
	we can't find any leaf accepting cursor. this fixes cursor
	navigation in documents containing empty iframes

	* htmltextslave.c (get_offset_for_pointer): check for space to be
	!= NULL

	* htmlclueflow.c (layout_line): do not wrap in PRE paragraphs

	* gtkhtml.c (load_keybindings): removed Esc bindinding

2002-09-20  Radek Doulik  <rodo@ximian.com>

	* htmltablecell.c (save): check for self->parent

2002-09-20  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c (get_post_padding): headers of the same kind and
	level shouldn't have padding between them.

2002-09-19  Larry Ewing  <lewing@ximian.com>

	* testgtkhtml.c (on_set_base): call gtk_html_set_base here so that
	base_url stuff gets resolved better (testgtkhtml is still broken
	of course).

2002-09-19  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (get_pre_padding): don't add pre padding for
	non-items flows following items with the same level
	(write_flow_tag): add <BR> for non-item flows following items with
	the same level

2002-09-19  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (update_embedded): use